<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	style="@style/OutsideLayout">

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/projectInfoActivity_projectNameEditText"
			style="@style/EditTextStyle.Restrictive.Disabled"
			android:hint="@string/hint_projectName"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/projectInfoActivity_projectDescriptionEditText"
			style="@style/EditTextStyle.Restrictive.Description.Disabled"
			android:hint="@string/hint_projectDescription"/>

	</android.support.design.widget.TextInputLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/editTextMargin"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#555">

			<ImageButton
				android:id="@+id/projectInfoActivity_addColumnButton"
				style="@style/ButtonStyle.Image"
				android:contentDescription="@string/button_createColumn"/>

			<TextView
				android:id="@+id/projectInfoActivity_columnNameTitle"
				style="@style/TextStyle.Title"
				android:layout_toStartOf="@id/projectInfoActivity_addColumnButton"
				android:paddingEnd="0dp"
				android:paddingStart="10dp"
				android:text="@string/textView_addColumnHeader"/>

		</RelativeLayout>

		<android.support.v7.widget.RecyclerView
			android:id="@+id/projectInfoActivity_columnsRecycler"
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:layout_gravity="start"
			android:background="#555"
			android:padding="5dp"
			android:scrollbars="vertical"/>

		<RelativeLayout
			android:id="@+id/projectInfoActivity_textLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="invisible">

			<TextView
				style="@style/TextStyle.Question"
				android:layout_alignParentStart="true"
				android:text="@string/textView_deleteInstruction"
				android:textSize="12sp"/>

			<TextView
				style="@style/TextStyle.Question"
				android:layout_alignParentEnd="true"
				android:text="@string/textView_reorderInstruction"
				android:textSize="12sp"/>

		</RelativeLayout>

	</LinearLayout>

	<RelativeLayout
		style="@style/BottomLayout">

		<Button
			android:id="@+id/projectInfoActivity_deleteProjectButton"
			style="@style/ButtonStyle.Sized"
			android:layout_alignParentStart="true"
			android:text="@string/button_deleteProject"/>

		<Button
			android:id="@+id/projectInfoActivity_editProjectButton"
			style="@style/ButtonStyle.Sized"
			android:layout_alignParentEnd="true"
			android:text="@string/button_editProject"/>

		<Button
			android:id="@+id/projectInfoActivity_saveProjectButton"
			style="@style/ButtonStyle.Sized"
			android:layout_alignParentEnd="true"
			android:text="@string/button_saveProject"
			android:visibility="gone"/>

	</RelativeLayout>

</LinearLayout>