<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_margin="@dimen/layoutMarginDimen"
	android:orientation="vertical">

	<TextView
		style="@style/TextStyle"
		android:layout_marginBottom="@dimen/layoutMarginDimen"
		android:text="@string/textView_registerInstructions"/>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/registerActivity_usernameEditText"
			style="@style/EditTextStyle.Restrictive"
			android:hint="@string/hint_username"
			android:inputType="textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/registerActivity_emailEditText"
			style="@style/EditTextStyle"
			android:hint="@string/hint_email"
			android:inputType="textEmailAddress|textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/registerActivity_passwordEditText"
			style="@style/EditTextStyle"
			android:hint="@string/hint_password"
			android:inputType="textPassword|textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		style="@style/EditTextLayoutStyle">

		<android.support.design.widget.TextInputEditText
			android:id="@+id/registerActivity_confirmPasswordEditText"
			style="@style/EditTextStyle"
			android:hint="@string/hint_confirmPassword"
			android:inputType="textPassword|textNoSuggestions"/>

	</android.support.design.widget.TextInputLayout>

	<Button
		android:id="@+id/registerActivity_createAccountButton"
		style="@style/ButtonStyle"
		android:layout_gravity="center"
		android:layout_marginBottom="@dimen/buttonMarginDimen"
		android:layout_marginTop="@dimen/buttonMarginDimen"
		android:enabled="false"
		android:text="@string/button_createAccount"/>

	<LinearLayout
		style="@style/EditTextLayoutStyle"
		android:gravity="center_horizontal">

		<TextView
			style="@style/TextStyle.Question"
			android:text="@string/textView_userInstruction_register"/>

		<Button
			android:id="@+id/registerActivity_returnToLoginButton"
			style="@style/ButtonStyle.Borderless"
			android:text="@string/button_login"/>

	</LinearLayout>

</LinearLayout>